--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -4,5 +4,5 @@ vich_uploader:
     #mappings:
     #    medias:
     #        uri_prefix: /images/medias
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    #        upload_destination: '%kernel.project_dir%/public/docs/medias'
     #        namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
