--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/messenger": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/scheduler": "7.2.*",
         "symfony/serializer": "7.2.*",
         "symfony/translation": "7.2.*",
         "symfony/yaml": "7.2.*",
