--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,14 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "lexik/jwt-authentication-bundle": "^3.1",
+        "predis/predis": "^2.3",
         "runtime/frankenphp-symfony": "^0.2.0",
+        "symfony/cache": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/http-client": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/serializer": "7.2.*",
         "symfony/translation": "7.2.*",
