--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,19 +1,24 @@
 framework:
     cache:
-        # Unique name of your app: used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
-
-        # The "app" cache stores to the filesystem by default.
-        # The data in this cache should persist between deploys.
-        # Other options include:
-
-        # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
-
-        # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-        #app: cache.adapter.apcu
-
-        # Namespaced pools use the above "app" backend by default
-        #pools:
-            #my.dedicated.cache: null
+        # Utilisation de Redis comme système de cache par défaut
+        app: cache.adapter.redis
+        default_redis_provider: redis://redis:6379
+        # Configuration des pools de cache spécifiques
+        pools:
+            # Cache pour les données météorologiques
+            weather.cache:
+                adapter: cache.adapter.redis
+                tags: true
+                default_lifetime: 3600  # 1 heure
+            # Cache pour les horoscopes
+            horoscope.cache:
+                adapter: cache.adapter.redis
+                tags: true
+                default_lifetime: 3600  # 1 heure
+            # Cache pour l'authentification
+            auth.cache:
+                adapter: cache.adapter.redis
+                default_lifetime: 86400  # 24 heures
+            # Cache spécifique pour NelmioApiDoc
+            nelmio_api_doc.cache:
+                adapter: cache.adapter.filesystem # Utiliser le système de fichiers pour éviter les problèmes Redis
