--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email  # Changer username en email pour correspondre à votre entité User
+                property: email
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
@@ -18,6 +18,11 @@ security:
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+            
+        # Ajout d'un firewall spécifique pour la documentation API
+        api_doc:
+            pattern: ^/api/doc
             security: false
             
         login:
@@ -33,15 +38,16 @@ security:
             stateless: true
             entry_point: jwt
             jwt: ~
-            # Supprimer ou commenter cette ligne qui cause l'erreur:
-            # refresh_jwt:
-            #    check_path: /api/token/refresh
+            # refresh_jwt ligne supprimée
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+    # Correction de l'ordre des règles d'access_control
     access_control:
+        # Les routes publiques d'abord
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc.json, roles: PUBLIC_ACCESS }
         - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
         - { path: ^/api/token/refresh, roles: PUBLIC_ACCESS }
+        # La règle générale en dernier
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
