--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "lexik/jwt-authentication-bundle": "^3.1",
-        "nelmio/api-doc-bundle": "^5.0",
+        "nelmio/api-doc-bundle": "*",
         "predis/predis": "^2.3",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "7.2.*",
