--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,14 @@ controllers:
 api_login_check:
     path: /api/login_check
     methods: ['POST']
+
+# Documentation Swagger
+app.swagger:
+    path: /api/doc.json
+    methods: ['GET']
+    defaults: { _controller: nelmio_api_doc.controller.swagger }
+
+app.swagger_ui:
+    path: /api/doc
+    methods: ['GET']
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
